--- a/public/style.css
+++ b/public/style.css
@@ -180,7 +180,7 @@ padding-top: 10px;
  padding-left: 220px;
 }
 
-#containerAlbums{
+.containerAlbums{
     display: flex;
     justify-content:flex-start;
 
@@ -188,7 +188,7 @@ padding-top: 10px;
 .album{
     padding: 10px 20px;
 }
-.album p{
+.textCenter{
     text-align: center;
 }
 
@@ -238,7 +238,6 @@ padding-top: 10px;
     display: flex;
     justify-content: space-between;
     padding: 1% 6%;
-    /* margin-bottom: 10px; */
     align-items: center;;
 }
 .fechas a{
